<resources>
    <string name="app_name">私人藏书</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_book">我的藏书</string>
    <string name="title_find_book">图书查找</string>
    <string name="title_book_statistics">藏书统计</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_toolbar">ToolbarActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="book_detail">书籍详情</string>
    <string name="loading_book_info">正在加载图书信息…</string>
    <string name="introduction">内容简介</string>
    <string name="search_book_hint">输入关键字…</string>
    <string name="look_around">随便看看</string>
    <string name="private_book_total_price">藏书总价</string>
    <string name="delete_book">删除</string>
    <string name="book_analyze">藏书状态分析</string>
    <string name="action_share">分享</string>


    <string name="wallapop">M874.323897,513.518484 C860.358769,445.332884 816.382769,412.921263
    805.267282,406.191832 C800.657846,403.400084 797.676103,399.358653 797.88841,392.435874
    C801.757128,267.085474 710.243077,158.867537 582.509333,159.174063 C500.917128,159.372126
    449.925538,194.844295 407.832,243.511242 C403.062154,249.028716 394.697231,248.443958
    388.219487,245.076884 C305.763897,202.332968 207.573949,231.137011 166.022974,310.371705
    C130.01559,379.038316 144.36759,457.320421 202.808821,508.302821 C208.923282,513.617516
    210.187692,522.950063 205.809436,529.764379 C154.784821,609.4848 177.973538,715.561768
    257.71159,766.5536 C301.140308,794.348463 354.773949,801.186358 403.746256,785.058358
    C412.384821,782.544842 418.650256,785.063074 422.839795,791.594442 C475.761026,869.508716
    581.966769,891.790821 661.275487,840.157642 C704.27959,812.16 732.742974,766.610189
    738.87159,715.679663 C739.626462,709.492547 743.735795,703.578947 749.779487,702.036884
    C867.836718,671.8464 884.052308,561.025347 874.323897,513.518484 L874.323897,513.518484 Z
    M684.063179,687.984084 C683.473436,709.638989 676.924923,730.600674 665.106462,748.761179
    C629.740718,803.1248 556.985231,818.521853 502.596718,783.172295 C448.212923,747.822737
    432.808821,675.095832 468.174564,620.727495 C475.581744,609.466189 472.397128,594.361516
    461.111795,587.042611 C449.826462,579.704842 434.342154,582.647495 427.005744,593.937095
    C401.193846,629.234779 389.229128,672.785095 394.371692,716.292968 C395.376615,724.753095
    389.644308,732.548295 381.274667,734.236547 C352.188513,740.126568 321.941744,735.278737
    296.134564,720.631495 C237.032821,687.0928 216.316308,612.026863 249.865641,552.938021
    C253.578667,546.401937 260.542359,542.450105 268.388308,544.477895 C283.509333,548.674947
    299.139897,550.693305 314.831795,550.547116 C327.188103,550.448084 337.114667,540.361011
    337.01559,528.000926 C336.916513,516.282189 327.758974,506.624253 316.053744,505.883874
    C293.964308,504.488 273.483692,499.748632 255.404513,486.964126 C200.129026,447.874947
    190.947897,375.662063 229.285949,323.340379 C265.873641,273.400168 339.294706,263.102494
    392.32445,305.252221 C392.557946,305.437801 394.130815,307.005964 394.371699,307.181664
    C404.775463,314.770126 422.862026,310.613648 428.736673,299.141666 C440.24375,276.656781
    458.521641,261.568253 468.075487,254.626611 C543.430564,199.885726 639.874872,207.945011
    700.349538,278.762021 C762.522667,351.564379 752.445128,457.796968 673.579897,521.469558
    C663.106051,529.924968 662.237949,545.755874 671.055795,555.946695 C679.43959,565.647074
    694.447385,567.340042 704.685333,559.615579 C731.558769,539.328253 756.507282,511.646568
    771.939692,481.7296 C773.345641,478.985011 775.737641,475.754695 778.398564,474.2032
    C786.183179,469.577011 796.180513,473.241179 800.799385,481.022232 C810.357949,497.159663
    818.708718,521.238484 819.793846,539.955453 C823.549333,604.698526 772.458667,660.344842
    707.700103,664.112758 C692.470564,664.706947 684.119795,673.341558 684.063179,687.984084 Z
  </string>
    <string name="list_end_hint">我也是有底线的</string>
    <string name="add_to_ever_note">添加至印象笔记</string>
    <string name="note_hint">☆ 本应用中只能添加笔记和查看笔记，暂不支持更新…</string>
    <string name="note_title">笔记标题</string>
    <string name="note_content">笔记内容</string>
    <string name="wanna_read">想读</string>
    <string name="already_read">已读</string>
    <string name="not_read">在读</string>
    <string name="tag_show">分类:</string>
    <integer name="wallapop_original_width">1024</integer>
    <integer name="wallapop_original_height">1024</integer>
</resources>
