<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/ll_search_book_root"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.jaaaelu.gzw.neteasy.privatebook.fragments.findBook.FindBookFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow"/>

        <EditText
            android:id="@+id/et_book_info_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@id/iv_go_back"
            android:hint="@string/search_book_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:minWidth="300dp"
            android:backgroundTint="@android:color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/alreadyCollectBook"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_loading_book_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/viewfinder_mask"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"/>

        <TextView
            android:id="@+id/tv_loading_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/loading_book_info"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_look_around"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_look_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_with_flat_ripple"
            android:text="@string/look_around"
            android:textColor="@color/white"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rl_search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.jaaaelu.gzw.neteasy.common.widget.RecycleViewWithEmpty
            android:id="@+id/rl_search_book_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/pb_loading_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:progressTint="@color/colorPrimary"/>

        <LinearLayout
            android:id="@+id/ll_end_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/alreadyCollectBook"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/list_end_hint"
                android:textColor="@color/textsSecondColor"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/alreadyCollectBook"/>

        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
