<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_book_statistics"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_private_book_total_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="42sp"
            tools:text="12"/>

    </LinearLayout>

    <include
        layout="@layout/default_empty_view"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:minHeight="170dp"/>


    <com.jaaaelu.gzw.neteasy.common.widget.PieChart
        android:id="@+id/pie_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:minHeight="170dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_private_book_total_price"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/private_book_total_price"
            android:textColor="@color/textMainColor"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_private_book_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:textColor="@color/textMainColor"
            tools:text="¥ 245"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:background="@color/alreadyCollectBook"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:background="@color/colorAccent"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_auth"/>

        <TextView
            android:id="@+id/tv_love_auth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:textColor="@color/textMainColor"
            android:textSize="16sp"
            tools:text="王小波 / 最爱作者"/>

        <TextView
            android:id="@+id/tv_auth_book_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:textColor="@color/textMainColor"
            tools:text="2 本"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:background="@color/alreadyCollectBook"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:background="@color/colorAccent"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_publisher"/>

        <TextView
            android:id="@+id/tv_love_publisher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:textColor="@color/textMainColor"
            android:textSize="16sp"
            tools:text="机械工业出版社／最爱出版社"/>

        <TextView
            android:id="@+id/tv_publisher_book_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:textColor="@color/textMainColor"
            tools:text="2 本"/>

    </LinearLayout>

</LinearLayout>
